--- a/styles/global.scss
+++ b/styles/global.scss
@@ -1,3 +1,7 @@
+.container {
+  height: 100vh;
+}
+
 * {
     margin: 0;
     padding: 0;
@@ -24,24 +28,26 @@
 }
 
 @media (max-width: 1080px) {
-    html {
-        font-size: 93.75%;
-    }
+  html {
+    font-size: 93.75%;
+  }
 }
 
 @media (max-width: 720px) {
-    html {
-        font-size: 87.5%;
-    }
+  html {
+    font-size: 87.5%;
+  }
 }
 
 body {
-    background: var(--gray-50);
+  background: var(--gray-50);
+  padding: 0;
+  margin: 0;
 }
 
 body, input, textarea, button {
-    font: 500 1rem Inter, sans-serif;
-    color: var(--gray-500);
+  font: 500 1rem Inter, sans-serif;
+  color: var(--gray-500);
 }
 
 h1, h2, h3, h4, h5, h6 {
@@ -51,13 +57,13 @@ h1, h2, h3, h4, h5, h6 {
 }
 
 h1 {
-    font-size: 2rem;
+  font-size: 2rem;
 }
 
 h2 {
-    font-size: 1.5rem;
+  font-size: 1.5rem;
 }
 
 button {
-    cursor: pointer;
+  cursor: pointer;
 }
