--- a/styles/app.module.scss
+++ b/styles/app.module.scss
@@ -7,12 +7,24 @@
   display: flex;
   flex-direction: column;
   align-items: center;
-  justify-content: flex-start;
+  justify-content: space-between;
   font-size: 1.8rem;
-  color: var(--white);
+  color: var(--gray-50);
+
+  main {
+    flex: 1;
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
+    width: 100vw;
+  }
 }
 
-.App-body {
+.test {
+  background-color: #9f75ff;
+}
+
+.appBody {
   display: flex;
   flex-direction: column;
   justify-content: center;
