--- a/components/Header/styles.module.scss
+++ b/components/Header/styles.module.scss
@@ -3,14 +3,17 @@
   display: flex;
   flex-direction: row;
   justify-content: space-evenly;
+  box-shadow: 0 0.5rem 1rem rgb(0 0 0 / 5%), inset 0 -1px 0 rgb(0 0 0 / 10%);
+  background-color: var(--primary);
+  padding: 0.25rem;
 
   a {
     font: 500 1rem Inter, sans-serif;
     text-decoration: none;
-    color: var(--gray-50);
+    color: var(--text-primary);
 
     &:hover {
-      color: var(--purple-300)
+      color: var(--hover-primary);
     }
   }
 
